force-app/main/default/objects/Family__c/Family__c.object-meta.xml
<CustomObject>
    <description>ICX Client Data Cleaning Campaign</description>
    <label>Family</label>
    <nameField>
        <displayFormat>FAM-{00000000}</displayFormat>
        <label>Family Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Families</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>