force-app/main/default/objects/Family__c/fields/Campaign_Action__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Action__c</fullName>
    <description>Determines what action should be performed on the record</description>
    <label>Campaign Action</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Contact The Client</fullName>
            </value>
            <value>
                <fullName>Epsilon Modifies Personal Information</fullName>
            </value>
            <value>
                <fullName>Merge</fullName>
            </value>
            <value>
                <fullName>Modify Personal Information</fullName>
            </value>
            <value>
                <fullName>Share to Epsilon</fullName>
            </value>
            <value>
                <fullName>Share to Internal Control</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>