force-app/main/default/objects/Family__c/fields/Case_Typology__c.field-meta.xml
<CustomField>
    <fullName>Case_Typology__c</fullName>
    <label>Case Typology</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Complex cases</fullName>
            </value>
            <value>
                <fullName>Easy cases</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>