force-app/main/default/objects/Family__c/fields/Data_Cleaning_Team__c.field-meta.xml
<CustomField>
    <fullName>Data_Cleaning_Team__c</fullName>
    <description>Team in charge of the cleaning</description>
    <label>Data Cleaning Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client Services Advisor</fullName>
            </value>
            <value>
                <fullName>Client Development</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>