force-app/main/default/objects/Family__c/fields/Duplicate_Type__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Type__c</fullName>
    <description>Indicates on which point of contact the duplicate exists</description>
    <label>Duplicate Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email address</fullName>
            </value>
            <value>
                <fullName>Email address and mobile phone</fullName>
            </value>
            <value>
                <fullName>Mobile phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>