force-app/main/default/objects/Family__c/fields/Family_ID__c.field-meta.xml
<CustomField>
    <fullName>Family_ID__c</fullName>
    <description>ID of the Family</description>
    <externalId>true</externalId>
    <label>Family ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>