force-app/main/default/objects/Family__c/fields/Last_Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Contact_Date__c</fullName>
    <description>Specifies the last contact Date/Time</description>
    <label>Last Contact Date</label>
    <type>DateTime</type>
</CustomField>