force-app/main/default/objects/Family__c/fields/Master_Dream_ID__c.field-meta.xml
<CustomField>
    <fullName>Master_Dream_ID__c</fullName>
    <label>Master Dream ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>