force-app/main/default/objects/Family__c/fields/Member_Sum__c.field-meta.xml
<CustomField>
    <fullName>Member_Sum__c</fullName>
    <label>Number of Members</label>
    <summaryForeignKey>Family_Member__c.Family__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>