force-app/main/default/objects/Family__c/fields/Modified_Fields__c.field-meta.xml
<CustomField>
    <fullName>Modified_Fields__c</fullName>
    <description>CSC has modified either phone or email in the client profile and will record it by ticking boxes</description>
    <label>Modified Fields</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Home Phone</fullName>
            </value>
            <value>
                <fullName>Work Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>