force-app/main/default/objects/Family__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Campaign_Action__c</columns>
    <columns>Family_ID__c</columns>
    <columns>Data_Cleaning_Team__c</columns>
    <columns>Duplicate_Type__c</columns>
    <columns>Comment__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Case_Typology__c</columns>
    <columns>Member_Sum__c</columns>
    <columns>CSC__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <filters>
        <field>OWNER.LAST_NAME</field>
        <operation>notContain</operation>
        <value>Ibarrola,guittard,laure,Zhang,CHEN,ANG,TAM</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>3/16/2022 12:00 AM</value>
    </filters>
    <label>All EUROPE</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Corporate</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Corporate_Central</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Corporate_Digital</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>