force-app/main/default/objects/Family__c/listViews/All_Mediterranean_countries.listView-meta.xml
<ListView>
    <fullName>All_Mediterranean_countries</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Family_ID__c</columns>
    <columns>Data_Cleaning_Team__c</columns>
    <columns>Duplicate_Type__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Case_Typology__c</columns>
    <columns>Member_Sum__c</columns>
    <columns>CSC__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>CSC__c</field>
        <operation>equals</operation>
        <value>ISRAEL,GREECE,PORTUGAL</value>
    </filters>
    <label>All Mediterranean countries</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Corporate</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Corporate_Central</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Corporate_Digital</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>