force-app/main/default/objects/Family__c/listViews/Families_APAC.listView-meta.xml
<ListView>
    <fullName>Families_APAC</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Family_ID__c</columns>
    <columns>Data_Cleaning_Team__c</columns>
    <columns>Duplicate_Type__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Member_Sum__c</columns>
    <columns>CSC__c</columns>
    <columns>Case_Typology__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CSC__c</field>
        <operation>equals</operation>
        <value>Australia,Indonesia,Thailand,India,Singapore,New Zealand,Malaysia,Philippines,Vietnam,Guam</value>
    </filters>
    <label>Families APAC</label>
    <sharedTo>
        <roleAndSubordinatesInternal>CSC_DIRECTOR_APAC</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>