force-app/main/default/objects/Family__c/listViews/FAMILIES_HONG_KONG.listView-meta.xml
<ListView>
    <fullName>FAMILIES_HONG_KONG</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Family_ID__c</columns>
    <columns>Data_Cleaning_Team__c</columns>
    <columns>Duplicate_Type__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Case_Typology__c</columns>
    <columns>Member_Sum__c</columns>
    <columns>CSC__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CSC__c</field>
        <operation>equals</operation>
        <value>Hong Kong</value>
    </filters>
    <label>Families HONG KONG</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Area_NORTH_ASIA</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Corporate_Central</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Country_HONG_KONG</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>