force-app/main/default/objects/Family__c/listViews/Families_KOREA.listView-meta.xml
<ListView>
    <fullName>Families_KOREA</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Family_ID__c</columns>
    <columns>Data_Cleaning_Team__c</columns>
    <columns>Duplicate_Type__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Case_Typology__c</columns>
    <columns>Member_Sum__c</columns>
    <columns>CSC__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>CSC__c</field>
        <operation>equals</operation>
        <value>Korea</value>
    </filters>
    <label>Families KOREA</label>
    <sharedTo>
        <roleAndSubordinatesInternal>CSC_DIRECTOR_KOREA</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Country_KOREA</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>KOR_CSC_Korea_Manager</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>