force-app/main/default/objects/Family__c/listViews/Families_Taiwan.listView-meta.xml
<ListView>
    <fullName>Families_Taiwan</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Family_ID__c</columns>
    <columns>Data_Cleaning_Team__c</columns>
    <columns>Duplicate_Type__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Member_Sum__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CSC__c</field>
        <operation>equals</operation>
        <value>Taiwan</value>
    </filters>
    <label>Families Taiwan</label>
    <sharedTo>
        <roleAndSubordinatesInternal>CSC_DIRECTOR_HK_MO_TW</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>