force-app/main/default/objects/Family__c/listViews/Families_United_States.listView-meta.xml
<ListView>
    <fullName>Families_United_States</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Family_ID__c</columns>
    <columns>Data_Cleaning_Team__c</columns>
    <columns>Duplicate_Type__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Case_Typology__c</columns>
    <columns>Member_Sum__c</columns>
    <columns>CSC__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>CSC__c</field>
        <operation>equals</operation>
        <value>USA,Canada,Brazil,Mexico,Dominicain Republic,Aruba,Panama,Argentina,Chile,Colombia,Peru</value>
    </filters>
    <label>Families AMERICAS</label>
    <sharedTo>
        <roleAndSubordinatesInternal>AME_BRAZIL_CHILE_URUGUAY_Regional_Client_Development_Manager</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>AME_CANADA_Regional_Client_Development_Manager</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>AME_MEXICO_CARRIBBEAN_Regional_Client_Development_Manager</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Area_AMERICAS</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>CSC_DIRECTOR_AMERICAS</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>